	* Saving compressed GIF files now supported (using libgif)
	* New advanced dithering modes with many configuration options
	* Optional gamma correction for image scaling, rotation and Gaussian blur
	* Smudge tool can be configured to ignore opacity mode
	* Library detection in configure script improved
	* Channel deletion made easier to use
	* BUGFIX - Image scaling and rotation in nearest-neighbour mode now work correctly
	* BUGFIX - Lasso tool now properly handles clipboard alpha
	...and more still remains to do... ;-)

3.01	2006-7-15

	* German translation updated for version 3
	* BUGFIX - Memory alignment problems on Windows fixed (might affect speed)
	* BUGFIX - RGB-specific menu items now properly disabled in indexed mode

3.00	2006-6-21

	* Channels facilities added
	* Menus & toolbars reworked to be more task oriented
	* Toolbars can now be toggled on and off via the View menu
	* Drag 'n' drop from file managers supported for loading new layers
	* Animation preview has a play toggle
	* Clicking palette numbers opens up "Palette Editor" window
	* Paste preview now respects the palette protection mask
	* Transform Colour Window - Hue control added
	* Transform Colour Window - Selective palette option
	* Undo now less wasteful of memory when adjusting the palette
	* Major rewrite of back end code to improve performance
	* Colour A/B editor now uses GTK+ colour dialog
	* Ctrl+Arrows resizes selection area
	* Flood fill has fuzzy mode - right click icon for controls
	* Saving/Loading clipboards now includes mask data
	* Saving a composite layer image now de-coupled from saving the layer data file
	* Most documentation has been removed from the F1 help and is now in HTML form
	* HTML documentation available as a separate download package
	* mtPaint mailing lists set up - http://sourceforge.net/mail/?group_id=155874
	* configure script makes no assumptions about CPU - ./configure --help