@@ -1142,8 +1142,7 @@ int do_set_key_frame(GtkWidget *spin, gpointer fdata)
 {
 	int i;
 
-	gtk_spin_button_update(GTK_SPIN_BUTTON(spin));
-	i = gtk_spin_button_get_value_as_int(GTK_SPIN_BUTTON(spin));
+	i = read_spin(spin);
 	ani_set_key_frame(i);
 	layers_notify_changed();
 
